# torch_transformer

./: .gitignore  Dockerfile  README.md  pyproject.toml
config/: preprocess_config.yaml  train_config.yaml
docker_files/: README.md
docker_files/horovod/: Dockerfile
nmt/: __init__.py
nmt/cli/: __init__.py  _cmd.py  _download.py  _preprocess.py  _service.py
nmt/common/: utils.py
nmt/dataset/: nmt_dataset.py  utils.py
nmt/generator/: __init__.py  beam_search_generator.py  greedy_generator.py  jit_generator.py  utils.py
nmt/inference/: __init__.py  main.py  utils.py
nmt/model/: custom_transformer.py  transformer_model.py  utils.py
nmt/preprocess/: __init__.py  main.py  utils.py
nmt/preprocess/task/: __init__.py  remove_task.py  replace_task.py  tokenize_task.py
nmt/service/: api.py  app.py  server.py  utils.py
nmt/tokenize/: __init__.py  utils.py
nmt/tools/: export_graph.py
nmt/train/: main.py  trainer.py  utils.py
scripts/: export_graph_with_docker.sh  infer_with_docker.sh  multi-bleu.perl  train_with_docker.sh
